--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="vueContainer">
             <input v-model="message">
             <h1> {{message}}</h1>
+            <img :src="imgurl">
         </div>
         <!-- My JS -->
         <script src="myscripts.js"></script>
